backend/cloudformation/vpc-config.yaml
AWSTemplateFormatVersion: 2010-09-09 
Description: SLOJH App VPC fitted with public and private subnets to host a survey database and other related resources.

Resources: 
  VPC: 
    Type: AWS::EC2::VPC 
    Properties: 
      CidrBlock: 10.0.0.0/16 
      EnableDnsSupport: true 
      EnableDnsHostnames: true 
      InstanceTenancy: default 
      Tags: 
      - Key: Name
        Value: slojhAppVPC

  # InternetGateway Setup
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
       VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway

  # Establish Public Subnet 
  PublicSubnet1: 
    Type: AWS::EC2::Subnet 
    Properties: 
      VpcId: !Ref VPC 
      CidrBlock: 10.0.10.0/24 
      MapPublicIpOnLaunch: true 
      AvailabilityZone: "us-west-2a" 
      Tags: 
      - Key: Name 
        Value: !Join ['', ['PublicSubnet1 - ', !Ref 'AWS::StackName'] ] 
      - Key: SubnetType 
        Value: Public 
  
  PublicSubnet2: 
    Type: AWS::EC2::Subnet 
    Properties: 
      VpcId: !Ref VPC 
      CidrBlock: 10.0.12.0/24 
      MapPublicIpOnLaunch: true 
      AvailabilityZone: "us-west-2b" 
      Tags: 
      - Key: Name 
        Value: !Join ['', ['PublicSubnet2 - ', !Ref 'AWS::StackName'] ] 
      - Key: SubnetType 
        Value: Public 
  
  PublicSubnet3:
   Type: AWS::EC2::Subnet
   Properties:
     VpcId: !Ref VPC
     CidrBlock: 10.0.13.0/24
     MapPublicIpOnLaunch: true
     AvailabilityZone: "us-west-2c"
     Tags:
     - Key: Name
       Value: !Join ['', ['PublicSubnet3 - ', !Ref 'AWS::StackName'] ]
     - Key: SubnetType
       Value: Public

  # Establish Private Database Subnet 
  PrivateSubnet1: 
     Type: AWS::EC2::Subnet 
     Properties: 
       VpcId: !Ref VPC 
       CidrBlock: 10.0.31.0/24 
       MapPublicIpOnLaunch: false 
       AvailabilityZone: "us-west-2a" 
       Tags: 
       - Key: Name 
         Value: !Join ['', ['PrivateSubnet1 - ', !Ref 'AWS::StackName'] ] 
       - Key: SubnetType 
         Value: Private 
  
  PrivateSubnet2: 
     Type: AWS::EC2::Subnet 
     Properties: 
       VpcId: !Ref VPC 
       CidrBlock: 10.0.32.0/24 
       MapPublicIpOnLaunch: false 
       AvailabilityZone: "us-west-2b" 
       Tags: 
       - Key: Name 
         Value: !Join ['', ['PrivateSubnet2 - ', !Ref 'AWS::StackName'] ]
       - Key: SubnetType 
         Value: Private
  
  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.33.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: "us-west-2c"
      Tags:
      - Key: Name
        Value: !Join ['', ['PrivateSubnet3 - ', !Ref 'AWS::StackName'] ]
      - Key: SubnetType
        Value: Private

  # Establish NatGateway for each routes
#  NatEIP1:
#     Type: AWS::EC2::EIP
#     Properties:
#        Domain: vpc
#  
#  NatGateway1:
#    DependsOn: VPCGatewayAttachment
#    Type: AWS::EC2::NatGateway
#    Properties:
#      AllocationId: !GetAtt NatEIP1.AllocationId
#      SubnetId: !Ref PublicSubnet1
#      Tags:
#        - Key: Name
#          Value: !Join ['', ['NatGateway1 - ', !Ref 'AWS::StackName'] ]
#  
#  NatRoute1:
#      Type: AWS::EC2::Route
#      Properties:
#         RouteTableId: !Ref NatRouteTable1
#         DestinationCidrBlock: 0.0.0.0/0
#         NatGatewayId: !Ref NatGateway1
#  
#  NatRouteTable1:
#      Type: AWS::EC2::RouteTable
#      Properties:
#         Tags:
#            - Key: Name
#              Value: !Join ['', ['NatRouteTable1 - ', !Ref 'AWS::StackName'] ]
#            - Key: Network
#              Value: Public
#         VpcId: !Ref VPC

  # Public Route/RouteTable
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
           Value: !Join ['', ['PublicRouteTable - ', !Ref 'AWS::StackName'] ]
         - Key: Network
           Value: Public

  # Public Subnet RouteTable Association
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3


  # Data Subnet RouteTable Association
  #PrivateSubnetRouteTableAssociation1:
  #  Type: AWS::EC2::SubnetRouteTableAssociation
  #  Properties:
  #    RouteTableId: !Ref NatRouteTable1
  #    SubnetId: !Ref PrivateSubnet1

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Lambda-associated security group to give functions access to an RDS instance.
      GroupName: LambdaSecurityGroup
      Tags: 
        - Key: Name 
          Value: !Join ['', ['LambdaSecurityGroup - ', !Ref 'AWS::StackName'] ]
      VpcId: !Ref VPC

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: security group for the RDS instance.
      GroupName: DatabaseSecurityGroup
      SecurityGroupIngress: 
        -
          Description: connection to database security group
          FromPort: 3306
          ToPort: 3306
          IpProtocol: tcp
          SourceSecurityGroupId: !Ref LambdaSecurityGroup
      Tags: 
        - Key: Name 
          Value: !Join ['', ['DatabaseSecurityGroup - ', !Ref 'AWS::StackName'] ]
      VpcId: !Ref VPC

Outputs:
  #VPC:
  #  Value: !Ref VPC
  #  Export:
  #    Name: !Sub "${AWS::StackName}-VPC"

  #PublicSubnet1:
  #  Value: !Ref PublicSubnet1
  #  Export:
  #    Name: !Sub "${AWS::StackName}-PublicSubnet1"

  #PublicSubnet2:
  #  Value: !Ref PublicSubnet2
  #  Export:
  #    Name: !Sub "${AWS::StackName}-PublicSubnet2"

  #PublicSubnet3:
  #  Value: !Ref PublicSubnet3
  #  Export:
  #    Name: !Sub "${AWS::StackName}-PublicSubnet3"

  #left un-commented to be referenced by rds-config stack creation
  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: cloudformation-PrivateSubnet1

  PrivateSubnet2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: cloudformation-PrivateSubnet2

  #PrivateSubnet3:
  #  Value: !Ref PrivateSubnet3
  #  Export:
  #    Name: !Sub "${AWS::StackName}-PrivateSubnet3" 

  #LambdaSecurityGroup:
  #  Value: !Ref LambdaSecurityGroup
  #  Export:
  #    Name: cloudformation-LambdaSecurityGroup

  #left un-commented to be referenced by rds-config stack creation
  DatabaseSecurityGroup:
    Value: !Ref DatabaseSecurityGroup
    Export:
      Name: cloudformation-DatabaseSecurityGroup
